# Task-Management-Agent

./: .mcp.json  CHANGELOG.md  README.md  agent.md
.github/workflows/: notification-api.yml  task-agent.yml  task-mcp-server.yml
deployments/: README.md
deployments/notification-api/: cronjob.yaml  deployment.yaml  service.yaml
deployments/task-agent/: deployment.yaml  secret.yaml  service.yaml
deployments/task-mcp-deploy/: deployment.yaml  namespace.yaml
deployments/task-mcp-server/: deployment.yaml  service.yaml
docs/adrs/: agent-decisions.md
notification-api/: .dockerignore  Dockerfile  pyproject.toml
notification-api/src/notification_api/: api.py  mcp_client.py  models.py  store.py
spc/: implementation-plan.md  mcp_dic.md  task-server-tools.md
spc/notification/: deployment-spec.md  notification-api.md
spc/tasks-agents/: open-sdk-study.md  sandbox-agent-spec.md
task-agent/: .dockerignore  .env.example  Dockerfile  pyproject.toml
task-agent/src/: api.py  hello_sandbox.py  task_mcp_sandbox.py  test_hello_sandbox.py  test_task_mcp_sandbox.py
task-mcp-server/: .dockerignore  Dockerfile  pyproject.toml
task-mcp-server/src/task_mcp/: __main__.py  models.py  server.py  store.py
task-mcp-server/src/task_mcp/tools/: __init__.py  project_view.py  task_create.py  task_delete.py  task_get.py  task_transition.py  task_update.py
task-mcp-server/tests/: conftest.py  helpers.py  test_models.py  test_project_view.py  test_store.py  test_task_create.py  test_task_delete.py  test_task_get.py  test_task_transition.py  test_task_update.py
(+2 files in other folders)
