[project]
name = "task-agent"
version = "0.1.0"
description = "Task Management Agent — multi-agent system using OpenAI Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.14.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

